build_core_err.txt
   Compiling deve_core v0.0.1 (E:\gitclone\Deve-Note\crates\core)
warning: unused import: `file_id::FileId`
 --> crates\core\src\vfs.rs:6:5
  |
6 | use file_id::FileId;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> crates\core\src\watcher.rs:76:77
   |
76 |                         let old_content = crate::state::reconstruct_content(&ops);
   |                                           --------------------------------- ^^^^ expected `&[LedgerEntry]`, found `&Vec<(u64, LedgerEntry)>`
   |                                           |
   |                                           arguments to this function are incorrect
   |
   = note: expected reference `&[LedgerEntry]`
              found reference `&Vec<(u64, LedgerEntry)>`
note: function defined here
  --> crates\core\src\state.rs:4:8
   |
 4 | pub fn reconstruct_content(ops: &[LedgerEntry]) -> String {
   |        ^^^^^^^^^^^^^^^^^^^ -------------------

For more information about this error, try `rustc --explain E0308`.
warning: `deve_core` (lib) generated 1 warning
error: could not compile `deve_core` (lib) due to 1 previous error; 1 warning emitted
